# fahe

./: .gitattributes  README.md  filtered.ipynb  main.ipynb  pyproject.toml
filtered/: filtered_education.csv
final_data/notebooks/: final_outcome.ipynb
processed_data/502_investment/: Fahe_aggregated_dataset.sql
raw/Education/: georgia_edu_15.csv  georgia_edu_16.csv  georgia_edu_17.csv  georgia_edu_20.csv  georgia_edu_21.csv  georgia_edu_22.csv  georgia_edu_23.csv  kentucky_edu_15.csv  kentucky_edu_16.csv  kentucky_edu_19.csv  kentucky_edu_20.csv  kentucky_edu_21.csv  maryland_edu_16.csv  maryland_edu_18.csv  maryland_edu_19.csv  maryland_edu_22.csv  mississippi_edu_18.csv  mississippi_edu_20.csv  mississippi_edu_23.csv  nc_edu_15.csv  nc_edu_16.csv  nc_edu_17.csv  nc_edu_18.csv  nc_edu_19.csv  nc_edu_20.csv  ny_edu_18.csv  ny_edu_20.csv  ny_edu_21.csv  ohio_edu_15.csv  ohio_edu_23.csv  penn_edu_15.csv  penn_edu_16.csv  penn_edu_20.csv  penn_edu_22.csv  sc_17.csv  sc_18.csv  sc_19.csv  sc_20.csv  tn_edu_17.csv  tn_edu_19.csv  (+13 more)
raw/Income/: alabama_income_16.csv  alabama_income_19.csv  alabama_income_20.csv  alabama_income_21.csv  alabama_income_22.csv  georgia_income_16.csv  georgia_income_17.csv  georgia_income_19.csv  georgia_income_20.csv  georgia_income_21.csv  kentucky_income_15.csv  kentucky_income_17.csv  kentucky_income_18.csv  maryland_income_16.csv  maryland_income_17.csv  maryland_income_18.csv  maryland_income_20.csv  maryland_income_22.csv  missippi_income_15.csv  missippi_income_16.csv  missippi_income_17.csv  missippi_income_18.csv  nc_income_17.csv  (+28 more)
(+346 files in other folders)
