[project]
name = "fahe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "geopandas>=1.1.1",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pyogrio>=0.11.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
